Adjust button length to fix text wrap

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -154,7 +154,7 @@ body {
   background: transparent;
   color: #fff;
   background-color: gray;
-  width: 30%;
+  width: 50%;
   font-family: poppins;
   font-size: 0.9rem;
 }
